# zyxmathlib

./: CMakeLists.txt  a.out  main.cpp
include/: CMakeLists.txt
include/number/: number.hpp
include/point/: a.out  point.cpp  point.hpp  test.cpp
include/tableviewer/: CMakeLists.txt  Makefile  a.out  table_viewer.cpp  table_viewer.hpp  test.cpp
include/tableviewer/.cache/clangd/index/: table_viewer.cpp.DC526C01A7DD9C92.idx  table_viewer.hpp.8172BF88F6F1AA75.idx  test.cpp.AE422554789F62F8.idx
include/tensor/: CMakeLists.txt  tensor.cpp  tensor.hpp
include/test/: test.hpp
include/timer/: a.out  test.cpp  timer.hpp
include/vector/: CMakeLists.txt  dynamic_vector.cpp  dynamic_vector.hpp  static_vector.cpp  static_vector.hpp
